--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ select {
 option {
     border: none;
 }
-#number_hidden {
+.number_hidden_container {
     padding: 40px 0 30px;
     text-align: center;
 }
@@ -98,7 +98,7 @@ p {
     padding: 20px;
 }
 .title_area {
-    max-width: calc(100% - 190px);
+    max-width: calc(100% - 200px);
 }
 .world_item {
     height: 100px;
@@ -117,6 +117,14 @@ p {
 
     transition-property: transform, filter, box-shadow;
     transition-duration: 0.15s;
+
+    animation: list_anim 0.5s ease;
+}
+@keyframes list_anim {
+    from {
+        opacity: 0;
+        transform: translateY(12px);
+    }
 }
 .world_item:hover {
     filter: brightness(110%);
@@ -465,7 +473,8 @@ th {
     padding-bottom: 40px;
 }
 .footer_container {
-    max-width: 1000px;
+    max-width: 800px;
+    padding: 12px;
     margin: 0 auto;
 }
 #footer a {
@@ -482,10 +491,10 @@ th {
         border: none;
         height: 100%;
     }
-    .content_inner {
+    /* .content_inner {
         margin: 0;
         padding: 20px;
-    }
+    } */
     .info_top {
         width: 100%;
         margin: 0;
@@ -497,6 +506,9 @@ th {
 
 /* Up to 600px */
 @media (max-width: 620px) {
+    #content h1 {
+        font-size: 32pt;
+    }
     #small_gallery img {
         width: 100%;
     }
