--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@ body {
 iframe {
     max-width: 100%;
     margin-left: 50%;
+    margin-bottom: 40px;
     transform: translateX(-50%);
 }
 .visible {visibility: visible !important;}
@@ -82,6 +83,9 @@ h1, h2, h3 {
 }
 h1 {
     font-size: 32pt;
+}
+h2 {
+    padding-top: 10px;
 }
 #content h1 {
     font-size: 40pt;
