--- a/index.css
+++ b/index.css
@@ -30,7 +30,13 @@ body {
     display: block;
 }
 iframe {
-    max-width: 100%;
+    /* height: 315px;
+    width: 560px; */
+    float: left;
+
+    height: 279px;
+    max-width: 496px;
+
     margin-left: 50%;
     margin-bottom: 40px;
     transform: translateX(-50%);
