--- a/index.css
+++ b/index.css
@@ -19,16 +19,27 @@ body {
     color: white;
     font-family: 'Inter', sans-serif;
 }
+.weight100 {font-weight: 100;}
+.weight900 {font-weight: 900 !important;}
+.pointer {cursor: pointer;}
+.hover_underline:hover {text-decoration: underline;}
 .flex {
     display: flex;
     align-items: flex-start;
 }
-.inline {
-    display: inline;
+.flex1 {
+    flex: 1;
 }
-.block {
-    display: block;
+.center {text-align: center;}
+.inline {display: inline;}
+.block {display: block;}
+
+.inline_icon {
+    transform: translateY(-2px);
+    vertical-align: middle;
+    width: 20px;
 }
+
 iframe {
     /* height: 315px;
     width: 560px; */
@@ -48,10 +59,30 @@ iframe {
 
 .hide_mouse {cursor: none !important;}
 
+/* Collapsible */
+summary {
+    cursor: pointer;
+}
+summary:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+details {
+    margin-top: 4px;
+    margin-bottom: 32px;
+}
+#players a {
+    color: white;
+    text-decoration: none;
+}
+#players a:hover {text-decoration: underline;}
+
 /* Select */
 .sort_container {
     float: right;
     margin-top: -80px;
+}
+#content .sort_container {
+    margin-top: -60px;
 }
 select {
     width: 185px;
@@ -102,17 +133,34 @@ p {
     margin-top: 4px;
     margin-bottom: 4px;
 }
+.secondary_text {
+    color: rgb(172, 172, 172);
+}
+.small {
+    padding-left: 4px;
+    font-size: 13pt;
+    font-weight: 500;
+}
 
 /* List */
+.bg_img_container {
+    height: 100vh;
+    width: 100%;
+
+    position: fixed;
+    z-index: -1;
+    overflow: hidden;
+}
 #main_bg_img {
     height: 100vh;
     width: 100%;
 
     position: absolute;
-    z-index: -1;
+
 
     background-size: cover !important;
     background-repeat: no-repeat !important;
+    background-position: center !important;
     /* background:
         linear-gradient(0deg, var(--content-bg) 0%, transparent 60%),
         linear-gradient(30deg, var(--content-bg) 40%, transparent 100%),
@@ -145,6 +193,7 @@ p {
     /* background:
         linear-gradient(90deg, rgb(39, 39, 39) 20%, transparent 100%),
         url('images/Finna SMP/2021-07-12_19.01.18.png'); */
+    background-color:rgb(39, 39, 39) !important;
     background-size: cover !important;
     background-position: center !important;
 
@@ -184,6 +233,7 @@ p {
 /* Content Overlay */
 #overlay_container {
     position: absolute;
+    z-index: 100;
     height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -195,6 +245,7 @@ p {
     width: 100%;
     overflow: hidden;
     position: fixed;
+
     background: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(12px);
 
@@ -302,6 +353,27 @@ p {
         opacity: 0;
     }
 }
+#copy_image_url {
+    width: auto;
+}
+#copy_image_url:hover::before {
+    content: 'Click to copy a link to this screenshot';
+    position: absolute;
+    /* transform: translateX(calc(-50% + 20px)); */
+    top: -30px;
+    width: auto;
+    text-align: center;
+    padding: 12px 20px;
+    background: rgba(255, 255, 255, 0.7);
+    color: black;
+    font-weight: 500;
+    animation: backdrop_fade 0.2s ease forwards;
+}
+#copy_image_url.copied:hover::before {
+    content: 'Copied!';
+}
+
+
 #viewer_tooltip {
     min-width: 500px;
     position: absolute;
@@ -418,7 +490,9 @@ p {
     float: right;
     margin-top: -60px;
 }
-.download_button:hover, #load_images:hover {
+.download_button:hover,
+#load_images:hover/*,
+select:hover*/ {
     border: 2px solid white;
 }
 .download_button.disabled {
@@ -461,8 +535,16 @@ p {
 }
 
 /* Content Info */
-.info_area * {
-    font-size: 1.1rem;
+.info_area {
+    margin-top: 12px;
+    display: flex;
+}
+.info_area *,
+#description {
+    font-weight: 100;
+}
+.info_area th {
+    font-weight: 900;
 }
 .info_area, #small_gallery {
     width: 100%;
@@ -477,19 +559,25 @@ table * {
 }
 table {
     margin-left: -2px;
-    margin-bottom: 12px;
+    margin-bottom: 32px;
 }
 
 th, td {
     text-align: left;
-    padding: 4px 8px;
+    padding: 0px 8px;
 }
 th {
     padding-left: 0;
 }
 
+#players,
+.players_dropdownplayers_dropdown {
+    max-width: 80%;
+}
+
 #small_gallery {
     padding: 20px;
+    margin-top: 16px;
 }
 
 #small_gallery img {
@@ -519,6 +607,7 @@ th {
 #enlarged {
     object-fit: cover;
     width: auto;
+    -webkit-user-drag: none;
     /* max-width: calc(100vw - 50px); */
     max-width: 100%;
     max-height: 100vh;
@@ -548,10 +637,43 @@ th {
     max-width: 800px;
     padding: 12px;
     margin: 0 auto;
+
+    display: flex;
 }
 #footer a {
-
     color: white;
+}
+footer .column {
+    flex: 1;
+    position: relative;
+}
+footer .column:not(:last-of-type) {
+    margin-right: 16px;
+}
+
+/* Social */
+.social_container {
+    position: absolute;
+    top: -16px;
+    right: 0;
+    /* justify-content: middle; */
+    padding: 4px;
+    margin-top: 8px;
+    background-color: var(--content-bg);
+    border-radius: 50px;
+    width: fit-content;
+}
+.social_img {
+    width: 48px;
+    padding: 6px;
+    filter: brightness(80%);
+
+    transition-property: transform, filter;
+    transition-duration: 0.15s;
+}
+.social_img:hover {
+    transform: scale(1.1, 1.1);
+    filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.25)) brightness(100%);
 }
 
 /* Up to 1000px */
@@ -613,7 +735,19 @@ th {
     #description {
         max-width: 100%;
     }
+    .info_area {
+        display: inherit;
+    }
     #content .buttons_container {
         margin-top: 16px;
+    }
+    #viewer_info {
+        padding: 24px 32px;
+    }
+    footer {
+        padding: 0 18px;
+    }
+    .footer_container {
+        display: unset;
     }
 }
