--- a/index.css
+++ b/index.css
@@ -47,16 +47,11 @@ body {
 }
 
 iframe {
-    /* height: 315px;
-    width: 560px; */
-    float: left;
+    width: 50%;
+    height: 240px;
 
-    height: 279px;
-    max-width: 496px;
-
-    margin-left: 50%;
     margin-bottom: 40px;
-    transform: translateX(-50%);
+    margin-right: 20px;
 }
 .visible {visibility: visible !important;}
 .hidden {visibility: hidden !important;}
@@ -326,6 +321,8 @@ p {
     padding: 30px;
     font-size: 13pt;
     
+    width: fit-content;
+    
     filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.25));
 }
 #content_back:hover {
@@ -575,6 +572,20 @@ select:hover*/ {
 #description {
     max-width: calc(100% - 250px);
     padding-bottom: 12px;
+}
+
+/* Youtube info */
+.uploader_card {
+    margin-top: 18px;
+}
+.yt_pfp {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+.yt_name {
+    padding-top: 10px;
+    padding-left: 12px;
 }
 
 table * {
