--- a/index.css
+++ b/index.css
@@ -146,6 +146,9 @@ p {
     font-weight: 500;
 }
 
+/* Above list */
+
+
 /* List */
 .bg_img_container {
     height: 100vh;
@@ -160,7 +163,7 @@ p {
     width: 100%;
 
     position: absolute;
-
+    transform: translateY(-50px);
 
     background-size: cover !important;
     background-repeat: no-repeat !important;
@@ -175,7 +178,7 @@ p {
 }
 @keyframes big_background {
     from {
-        transform: translateY(50px);
+        transform: translateY(0px);
         opacity: 0;
     }
 }
@@ -209,7 +212,8 @@ p {
     transition-duration: 0.15s;
 }
 .world_item,
-.list_separator {
+.list_separator,
+#main_list .video_item {
     animation: list_anim 0.5s ease;
 }
 @keyframes list_anim {
@@ -287,6 +291,7 @@ p {
     position: fixed;
     z-index: 50;
     bottom: 0;
+    top: 20px;
     left: 50%;
     transform: translateX(-50%);
 
@@ -543,6 +548,7 @@ select:hover*/ {
     float: none;
     margin: 0;
     margin-left: 50%;
+    /* margin-bottom: 64px; */
     transform: translateX(-50%);
     background: rgb(53, 53, 53);
 }
@@ -565,6 +571,10 @@ select:hover*/ {
 }
 .info_area th {
     font-weight: 900;
+}
+.video_item {
+    height: 240px;
+    margin-bottom: 24px;
 }
 .info_area, #small_gallery {
     width: 100%;
@@ -605,13 +615,14 @@ th {
     padding-left: 0;
 }
 
-#players,
-.players_dropdownplayers_dropdown {
+#players {
     max-width: 80%;
 }
 
 #small_gallery {
-    padding: 20px;
+    width: calc(100% - 100px);
+    position: relative;
+    padding: 20px 0;
     margin-top: 16px;
 }
 
@@ -620,7 +631,7 @@ th {
     /* object-fit: cover; */
     width: 50%;
     cursor: zoom-in;
-    padding: 6px;
+    /* padding: 6px; */
 }
 #small_gallery img:hover {
     filter: brightness(110%);
@@ -628,7 +639,6 @@ th {
 #image_viewer {
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.8);
     /* background: red; */
 
     position: fixed;
@@ -638,6 +648,11 @@ th {
     user-select: text;
 
     visibility: hidden;
+}
+#viewer_backdrop {
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
 }
 #enlarged {
     object-fit: cover;
@@ -719,6 +734,8 @@ footer .column:not(:last-of-type) {
     #content {
         border: none;
         height: 100%;
+        top: 0;
+        bottom: 0;
     }
     /* .content_inner {
         margin: 0;
@@ -736,7 +753,7 @@ footer .column:not(:last-of-type) {
 /* Up to 600px */
 @media (max-width: 620px) {
     #content h1 {
-        font-size: 32pt;
+        font-size: 24pt;
     }
     #small_gallery img {
         width: 100%;
@@ -744,7 +761,8 @@ footer .column:not(:last-of-type) {
     .world_item {
         height: 160px;
     }
-    .world_item h2 {
+    .world_item h2.title {
+        /* font-size: 20px; */
         max-width: 100%;
     }
     .world_item .download_button {
@@ -775,6 +793,7 @@ footer .column:not(:last-of-type) {
     }
     #content .buttons_container {
         margin-top: 16px;
+        margin-bottom: 16px;
     }
     #viewer_info {
         padding: 24px 32px;
