--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ body {
 
     overflow: overlay;
 }
+.italic {font-style: italic;}
 .weight100 {font-weight: 100;}
 .weight900 {font-weight: 900 !important;}
 .pointer {cursor: pointer;}
@@ -40,6 +41,7 @@ body {
 .center {text-align: center;}
 .inline {display: inline;}
 .block {display: block;}
+.float_right {float: right;}
 
 .inline_icon {
     transform: translateY(-2px);
@@ -214,6 +216,7 @@ p {
 }
 
 .main_container {
+    position: relative;
     max-width: 850px;
     margin: 0 auto;
     padding: 20px;
@@ -747,12 +750,10 @@ th {
     width: 100%;
     background: rgb(37, 37, 37);
     color: rgb(212, 212, 212);
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding: 28px 0;
 }
 .footer_container {
     max-width: 800px;
-    padding: 12px;
     margin: 0 auto;
 
     display: flex;
@@ -771,7 +772,7 @@ footer .column:not(:last-of-type) {
 /* Social */
 .social_container {
     position: absolute;
-    top: -16px;
+    bottom: 20px;
     right: 0;
     /* justify-content: middle; */
     padding: 4px;
@@ -940,6 +941,26 @@ footer .column:not(:last-of-type) {
 #content.visible #notice.visible { position: unset; }
 #content:not(.visible) #notice.visible { visibility: hidden !important;}
 
+
+/* Favorite button */
+#bg_favorite {
+    position: absolute;
+    top: 42px;
+    right: 20px;
+
+    opacity: 0.7;
+    font-size: 24pt;
+    text-shadow: 1px 1px 10px black;
+
+    cursor: pointer;
+}
+#bg_favorite:hover {
+    opacity: 1;
+    /* color: white !important; */
+}
+#bg_favorite.set {
+    color: goldenrod;
+}
 
 
 /* Up to 1000px */
