--- a/index.css
+++ b/index.css
@@ -30,7 +30,8 @@ body {
 .weight100 {font-weight: 100;}
 .weight900 {font-weight: 900 !important;}
 .pointer {cursor: pointer;}
-.hover_underline:hover {text-decoration: underline;}
+.hover_underline:hover,
+.hover_underline:focus-visible {text-decoration: underline;}
 .flex {
     display: flex;
     align-items: flex-start;
@@ -86,7 +87,8 @@ summary {
 
     transition: padding 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-summary:hover {
+summary:hover,
+summary:focus-visible {
     padding-left: 12px;
     background-color: #292929;
     border-color: transparent;
@@ -102,7 +104,8 @@ details {
     color: white;
     text-decoration: none;
 }
-#players a:hover {text-decoration: underline;}
+#players a:hover,
+#players a:focus-visible {text-decoration: underline;}
 
 /* Select */
 .sort_container {
@@ -263,7 +266,8 @@ p {
         transform: translateY(12px);
     }
 }
-.world_item:hover {
+.world_item:hover,
+.world_item:focus-visible {
     filter: brightness(110%);
     transform: scale(1.005, 1.005);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
@@ -380,7 +384,8 @@ p {
     top: 8px;
 }
 #stati
-.back_button:hover {
+.back_button:hover,
+.back_button:focus-visible {
     text-decoration: underline;
 }
 #statistics_back {
@@ -404,7 +409,8 @@ p {
     width: 85px;
     padding: 16px;
 }
-.viewer_button:hover {
+.viewer_button:hover,
+.viewer_button:focus-visible {
     opacity: 1;
 }
 #viewer_info {
@@ -431,7 +437,8 @@ p {
 #copy_image_url {
     width: auto;
 }
-#copy_image_url:hover::before {
+#copy_image_url:hover::before,
+#copy_image_url:focus-visible::before {
     content: 'Click to copy a link to this screenshot';
     position: absolute;
     /* transform: translateX(calc(-50% + 20px)); */
@@ -446,7 +453,8 @@ p {
 
     font-size: 11pt;
 }
-#copy_image_url.copied:hover::before {
+#copy_image_url.copied:hover::before,
+#copy_image_url.copied:focus-visible::before {
     content: 'Copied!';
 }
 
@@ -493,7 +501,8 @@ p {
     max-width: 100%;
     transition: transform 0.3s;
 }
-#header_image:hover {transform: scale(1.025, 1.025);}
+#header_image:hover,
+#header_image:focus-visible {transform: scale(1.025, 1.025);}
 
 .content_inner {
     margin: 0px 50px;
@@ -529,10 +538,12 @@ p {
     filter: brightness(50%);
     cursor: pointer;
 }
-#copy_link:hover {
+#copy_link:hover,
+#copy_link:focus-visible {
     filter: brightness(100%);
 }
-#copy_link:hover::before {
+#copy_link:hover::before,
+#copy_link:focus-visible::before {
     content: 'Copy a link to this page';
     position: absolute;
     transform: translateX(calc(-50% + 20px));
@@ -545,7 +556,8 @@ p {
 
     font-size: 11pt;
 }
-#copy_link.copied:hover::before {
+#copy_link.copied:hover::before,
+#copy_link.copied:focus-visible::before {
     content: 'Copied!';
 }
 #copy_link img {
@@ -576,8 +588,11 @@ button {
     margin-top: -60px;
 }
 .download_button:hover,
-#load_images:hover/*,
-select:hover*/ {
+.download_button:focus-visible,
+#load_images:hover,
+#load_images:focus-visible/*,
+select:hover,
+select:focus-visible*/ {
     border: 2px solid white;
 }
 .download_button.disabled {
@@ -714,7 +729,8 @@ th {
     cursor: zoom-in;
     /* padding: 6px; */
 }
-.small_gallery img:hover {
+.small_gallery img:hover,
+.small_gallery img:focus-visible {
     filter: brightness(110%);
 }
 #image_viewer {
@@ -804,7 +820,8 @@ footer .column:not(:last-of-type) {
     transition-property: transform, filter;
     transition-duration: 0.15s;
 }
-.social_img:hover {
+.social_img:hover,
+.social_img:focus-visible {
     transform: scale(1.1, 1.1);
     filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.25)) brightness(100%);
 }
@@ -970,7 +987,8 @@ footer .column:not(:last-of-type) {
 
     cursor: pointer;
 }
-#bg_favorite:hover {
+#bg_favorite:hover,
+#bg_favorite:focus-visible {
     opacity: 1;
     /* color: white !important; */
 }
